--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -188,9 +188,6 @@ colors:
   #primary:
   #  background: '#1d1f21'
   #  foreground: '#c5c8c6'
-  primary:
-    background: '#282828'
-    foreground: '#ebdbb2'
 
     # Bright and dim foreground colors
     #
@@ -210,9 +207,6 @@ colors:
   # cursor:
   #  text: CellBackground
   #  cursor: CellForeground
-  cursor:
-    text: '#282828'
-    cursor: '#ebdbb2'
 
   # Vi mode cursor colors
   #
@@ -278,9 +272,6 @@ colors:
   #selection:
   #  text: CellBackground
   #  background: CellForeground
-  selection:
-    text: '#d5c4a1'
-    background: '#3c3836'
 
   # Normal colors
   #normal:
@@ -292,15 +283,6 @@ colors:
   #  magenta: '#b294bb'
   #  cyan:    '#8abeb7'
   #  white:   '#c5c8c6'
-  normal:
-    black:   '#282828'
-    red:     '#cc241d'
-    green:   '#98971a'
-    yellow:  '#d79921'
-    blue:    '#458588'
-    magenta: '#b16286'
-    cyan:    '#689d6a'
-    white:   '#a89984'
 
   # Bright colors
   #bright:
@@ -312,15 +294,6 @@ colors:
   #  magenta: '#c397d8'
   #  cyan:    '#70c0b1'
   #  white:   '#eaeaea'
-  bright:
-    black:   '#928374'
-    red:     '#fb4939'
-    green:   '#b8bb26'
-    yellow:  '#fabd2f'
-    blue:    '#83a598'
-    magenta: '#d3869b'
-    cyan:    '#8ec07c'
-    white:   '#ebdbb9'
 
   # Dim colors
   #
@@ -352,6 +325,61 @@ colors:
   # the default background. When set to `true` all cells will be transparent
   # regardless of their background color.
   #transparent_background_colors: false
+
+  # Gruvbox Dark
+  # primary:
+  #   background: '#282828'
+  # foreground: '#ebdbb2'
+  # cursor:
+  #   text: '#282828'
+  #   cursor: '#ebdbb2'
+  # selection:
+  #   text: '#d5c4a1'
+  #   background: '#3c3836'
+  # normal:
+  #   black:   '#282828'
+  #   red:     '#cc241d'
+  #   green:   '#98971a'
+  #   yellow:  '#d79921'
+  #   blue:    '#458588'
+  #   magenta: '#b16286'
+  #   cyan:    '#689d6a'
+  #   white:   '#a89984'
+  # bright:
+  #   black:   '#928374'
+  #   red:     '#fb4939'
+  #   green:   '#b8bb26'
+  #   yellow:  '#fabd2f'
+  #   blue:    '#83a598'
+  #   magenta: '#d3869b'
+  #   cyan:    '#8ec07c'
+  #   white:   '#ebdbb9'
+
+  # TokyoNight night
+  primary:
+    background: '#1a1b26'
+    foreground: '#c0caf5'
+  normal:
+    black:   '#15161E'
+    red:     '#f7768e'
+    green:   '#9ece6a'
+    yellow:  '#e0af68'
+    blue:    '#7aa2f7'
+    magenta: '#bb9af7'
+    cyan:    '#7dcfff'
+    white:   '#a9b1d6'
+  bright:
+    black:   '#414868'
+    red:     '#f7768e'
+    green:   '#9ece6a'
+    yellow:  '#e0af68'
+    blue:    '#7aa2f7'
+    magenta: '#bb9af7'
+    cyan:    '#7dcfff'
+    white:   '#c0caf5'
+  indexed_colors:
+    - { index: 16, color: '#ff9e64' }
+    - { index: 17, color: '#db4b4b' }
 
 # Bell
 #
